# yuno

./: .gitignore  README.md
back/: .env.example  README.md  pyproject.toml  sample_enriched_alert.json  test_ai_slack_notifications.py  test_alerts_system.py
back/.devcontainer/: devcontainer.json
back/alembic/: env.py
back/alembic/versions/: 041d47bcb649_merge_multiple_heads.py  080e138beb3e_add_amount_usd_equivalent_field.py  10309e03c6ad_create_normalized_payment_events_table.py  20f44bd4e8a3_add_error_source_and_http_status_code_.py  43461d7c7673_add_missing_fields_to_normalized_.py  8105441a6d10_merge_heads_for_alert_fields.py  826026dec36c_change_amount_usd_to_amount_and_currency.py  a1b2c3d4e5f6_add_teams_and_update_users_with_roles.py  b1c2d3e4f5g6_create_users_table.py  c1d2e3f4g5h6_create_users_and_teams_tables.py  d14f2ca8360e_add_server_default_to_teams_created.py  e1f2a3b4c5d6_create_alert_reports_table.py
back/app/: main.py
back/app/api/: index.py
back/app/api/routers/: Dockerfile  __init__.py  alert_reports.py  alerts.py  analytics.py  auth.py  docker-compose.yaml  entrypoint.sh  events.py  health.py  notifications.py  teams.py  users.py  worker.py
back/app/core/: config.py
back/app/domain/: exceptions.py
back/app/domain/exceptions/: __init__.py  exceptions.py
back/app/domain/interfaces/: __init__.py  normalizer.py  notifier_port.py  repository.py
back/app/models/: __init__.py  alert_report.py  payment_event.py  team.py  user.py
back/app/services/: ai_service.py  alert_enrichment_service.py  alert_service.py  analytics_service.py  auth.py  ingestion_orchestrator.py  mailer.py  team.py  user.py
back/app/workers/: datalake_worker.py
back/docs/: ARCHITECTURE.md  BEST_PRACTICES.md  CAMBIOS_SYNC_DB.md  DATA_LAKE_INTEGRATION.md  DATA_LAKE_NEXT_STEPS.md  DATA_LAKE_QUICKREF.md  DIAGRAMS.md  INDEX.md  PROJECT_README.md  QUICK_REFERENCE.md  ROADMAP.md  START_HERE.md  SUMMARY.md
back/tests/e2e/: test_analytics_router.py  test_health_router.py
back/tests/integration/: test_analytics_service.py
data-insert/: README.md  (+7 more)
(+120 files in other folders)
